--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
 body { font-family: system-ui, sans-serif; background:#f4f6f8; padding:20px; }
 .card { max-width:900px; margin:auto; background:#fff; padding:20px; border-radius:12px; }
 .hunt { border:1px solid #ddd; padding:12px; border-radius:8px; margin-bottom:12px; }
-button { margin:6px 6px 6px 0; padding:8px 14px; }
+button { margin:6px 6px 6px 0; padding:10px 16px; font-size:16px; }
 input, textarea { width:100%; padding:8px; margin-bottom:10px; }
-
-.qr { margin:10px 0; }
 
 .overlay {
   position:fixed; inset:0; background:rgba(0,0,0,.6);
@@ -20,6 +18,7 @@ input, textarea { width:100%; padding:8px; margin-bottom:10px; }
   color:#fff; font-size:24px; z-index:999;
 }
 
+.qr { margin:12px 0; }
 .pagebreak { page-break-before: always; }
 
 @media print {
@@ -37,9 +36,6 @@ input, textarea { width:100%; padding:8px; margin-bottom:10px; }
 <script>
 /* ========= UTIL ========= */
 function uid(){ return Math.random().toString(36).slice(2,9); }
-function nowStamp(){
-  return new Date().toISOString().replace(/[:T]/g,"-").slice(0,16);
-}
 
 /* ========= DEFAULT HUNTS ========= */
 const DEFAULT_HUNTS = {
@@ -116,23 +112,88 @@ const q = new URLSearchParams(location.search);
 const app = document.getElementById("app");
 
 /* ========= ROUTER ========= */
-if(q.get("print")) printPage(q.get("print"));
+if(q.get("start")) startPage(q.get("start"));
+else if(q.get("play")) play();
+else if(q.get("print")) printPage(q.get("print"));
 else home();
 
-/* ========= HOME ========= */
+/* ========= HOME (Parent only) ========= */
 function home(){
 app.innerHTML=`
 <h1>Scavenger Hunts</h1>
 ${Object.entries(HUNTS).map(([k,h])=>`
 <div class="hunt">
 <h3>${h.name}</h3>
-<button onclick="location='?print=${k}'">🖨 Print</button>
-</div>`).join("")}`;
+<button onclick="location='?print=${k}'">🖨 Print Instructions</button>
+</div>
+`).join("")}
+`;
+}
+
+/* ========= START PAGE ========= */
+function startPage(key){
+const h = HUNTS[key];
+if(!h) return home();
+
+app.innerHTML = `
+<h1>🎉 Welcome, Explorer!</h1>
+<p>
+You have been invited on a <strong>special scavenger hunt</strong>!
+</p>
+<p>
+Around this place are <strong>hidden clues</strong> waiting to be found.
+Each clue will lead you to the next one.
+</p>
+<p>
+You might need to look carefully, think smart,
+scan QR codes, and enter secret numbers.
+</p>
+<p>
+There are no wrong turns — just keep trying!
+</p>
+<button onclick="location='?play=${key}&s=1'">▶️ Start the Hunt</button>
+`;
+}
+
+/* ========= PLAY ========= */
+function play(){
+const key = q.get("play");
+const step = parseInt(q.get("s")||0);
+const h = HUNTS[key];
+if(!h) return home();
+
+if(step===0) return startPage(key);
+
+if(step <= h.clues.length){
+const c = h.clues[step-1];
+app.innerHTML = `
+<p><strong>Clue ${step}:</strong></p>
+<p>${c.clue}</p>
+<input id="ans" placeholder="Enter code">
+<button onclick="check('${c.keyword}', '${key}', ${step+1})">Submit</button>
+`;
+return;
+}
+
+app.innerHTML = `<h2>${h.finish}</h2>`;
+}
+
+/* ========= CHECK ========= */
+function check(correct, key, next){
+const v = document.getElementById("ans").value.trim().toLowerCase();
+if(v === correct){
+location = `?play=${key}&s=${next}`;
+}else{
+overlay.style.display="flex";
+setTimeout(()=>overlay.style.display="none",1500);
+}
 }
 
 /* ========= PRINT ========= */
 function printPage(key){
 const h = HUNTS[key];
+if(!h) return home();
+
 app.innerHTML = `
 <h2>${h.name} – Parent Instructions</h2>
 
@@ -140,7 +201,7 @@ ${h.clues.map((c,i)=>`
 <p><strong>Clue ${i+1}:</strong> ${c.clue}</p>
 <p><strong>Answer:</strong> ${c.keyword}</p>
 <div class="qr"><canvas id="pqr${i}"></canvas></div>
-<p><em>Parent Notes:</em></p><br><br>
+<p><em>Parent notes:</em></p><br>
 `).join("")}
 
 <div class="pagebreak"></div>
