--- a/index.html
+++ b/index.html
@@ -2,223 +2,278 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Scavenger Hunt</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Scavenger Hunts</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-body { font-family: system-ui, sans-serif; background:#f4f6f8; padding:20px; }
-.card { max-width:900px; margin:auto; background:#fff; padding:20px; border-radius:12px; }
-button { padding:12px 18px; font-size:18px; cursor:pointer; }
-
-.overlay {
-  position:fixed; inset:0; display:none;
-  align-items:center; justify-content:center;
-  font-size:40px; font-weight:bold; color:white; z-index:1000;
+:root{
+  --bg:#f2f7fb;
+  --card:#ffffff;
+  --accent:#6c63ff;
+  --green:#2ecc71;
+  --text:#222;
 }
-.overlay.correct { background:rgba(0,160,0,0.85); }
-.overlay.wrong { background:rgba(200,0,0,0.85); }
+body{
+  margin:0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+  background:var(--bg);
+  color:var(--text);
+}
+.container{
+  max-width:900px;
+  margin:auto;
+  padding:20px;
+}
+h1,h2,h3{text-align:center;}
+.card{
+  background:var(--card);
+  border-radius:14px;
+  padding:20px;
+  margin-bottom:16px;
+  box-shadow:0 8px 20px rgba(0,0,0,.08);
+}
+.search{
+  width:100%;
+  padding:14px;
+  border-radius:10px;
+  border:1px solid #ccc;
+  margin-bottom:20px;
+  font-size:16px;
+}
+.hunt-title{
+  font-size:20px;
+  font-weight:700;
+  text-align:center;
+}
+.hunt-actions{
+  display:flex;
+  justify-content:center;
+  gap:14px;
+  margin-top:12px;
+}
+.btn{
+  padding:12px 18px;
+  border-radius:10px;
+  border:none;
+  cursor:pointer;
+  font-size:16px;
+}
+.btn-accent{background:var(--accent);color:white;}
+.btn-green{background:var(--green);color:white;}
+.btn-outline{background:#eee;}
 
-.print-page { page-break-after:always; }
-.print-item { margin-bottom:20px; }
-.notes { border:1px dashed #aaa; height:40px; margin-top:6px; }
-
-.qr-label { font-weight:bold; margin-bottom:6px; }
-
-@media print { button { display:none; } }
+.center{
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  justify-content:center;
+  min-height:70vh;
+  text-align:center;
+}
+.clue{
+  font-size:1.8rem;
+  font-weight:700;
+  margin-bottom:30px;
+}
+input.answer{
+  width:80%;
+  max-width:300px;
+  padding:14px;
+  font-size:1.4rem;
+  text-align:center;
+  border-radius:10px;
+  border:2px solid #ccc;
+  margin-bottom:20px;
+}
+.overlay{
+  position:fixed;
+  inset:0;
+  background:rgba(0,0,0,.6);
+  display:none;
+  align-items:center;
+  justify-content:center;
+  z-index:999;
+}
+.overlay.success{
+  background:rgba(46,204,113,.9);
+  color:white;
+  font-size:3rem;
+  font-weight:800;
+}
+@media print{
+  body{background:white;}
+  .no-print{display:none;}
+  .page-break{page-break-before:always;}
+}
+.qr-grid{
+  display:grid;
+  grid-template-columns:repeat(2,1fr);
+  gap:20px;
+  text-align:center;
+}
 </style>
 </head>
 
 <body>
-
-<div class="card" id="app"></div>
-
-<div id="correct" class="overlay correct">✅ Correct!</div>
-<div id="wrong" class="overlay wrong">❌ Try Again</div>
+<div class="overlay success" id="successOverlay">✔</div>
+<div class="container" id="app"></div>
 
 <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
 
 <script>
-/* ================= UTIL ================= */
-function uid(){ return Math.random().toString(36).slice(2,9); }
-function code(){ return Math.floor(100000 + Math.random()*900000).toString(); }
+/* ---------------- DATA (VERBATIM) ---------------- */
 
-/* ================= BASE HUNTS (VERBATIM) ================= */
-const BASE_HUNTS = [
-{
-  name:"Escape the House",
-  clues:[
-    ["I show your face but I’m not a photo. I hang on walls and doors. Where am I?","Mirror"],
-    ["I have pages but no homework. I’m quiet unless you drop me. I live where stories sleep.","Bookshelf"],
-    ["I open wide but never talk. I keep food safe and cold. Don’t forget to close me!","Fridge"],
-    ["I go round and round but never get dizzy. I clean but hate socks in pairs.","Washing Machine"],
-    ["I have hands but no arms. I never clap, but I’m always right on time.","Clock"],
-    ["I hide your feet when you’re not home. I like pairs, but I’m often missing one.","Shoe Rack"],
-    ["I’m soft, I’m comfy, and I steal naps. People sit on me 'just for a minute'.","Couch"],
-    ["I light up the dark but disappear by day. Flip me on.","Lamp"],
-    ["I’m full of secrets, but I don’t talk. You knock before opening me.","Bedroom Door"],
-    ["You cracked every lock! The final key is hidden where treasures are kept safe. Your Colour is RED","Red Ribbon"]
-  ]
-},
-{
-  name:"Fortnite IRL",
-  clues:[
-    ["You’ve dropped in. First loot location: Where controllers go when the game is off.","Gaming Desk"],
-    ["Shields up! Find the place where drinks recharge HP.","Fridge"],
-    ["Storm incoming 🌪️ Where do shoes hide when the storm hits outside?","Entrance"],
-    ["You need mats. Wood, brick, metal… Find where tools live.","Garage"],
-    ["Campfire deployed 🔥 Where the family gathers to chill.","Lounge Room"],
-    ["Inventory check. You can’t win without sleep.","Bed"],
-    ["Chest nearby… I hear it. Where secrets are stored behind closed doors.","Wardrobe"],
-    ["Reboot van activated ⚡ Where devices come back to life.","Phone Charger"],
-    ["High ground wins games. Go where you can see the whole room.","Stairs"],
-    ["Final circle. Only one remains. Where battles are watched, not played.","TV"],
-    ["One last challenge… Look where snacks disappear during long sessions.","Pantry"],
-    ["VICTORY ROYALE 🏆 Claim your reward where legends are made. Your colour is SILVER","Silver Ribbon"]
-  ]
-},
-{
-  name:"System Breach",
-  clues:[
-    ["SYSTEM ONLINE Begin at the device that controls all others.","Router"],
-    ["AUTHENTICATION REQUIRED Find where passwords are written but never stored digitally.","Notebook"],
-    ["DATA COLD STORAGE Files preserved at low temperature.","Fridge"],
-    ["INPUT DEVICE DETECTED Where commands are typed, not spoken.","Keyboard"],
-    ["PERIPHERAL FOUND One click can change everything.","Mouse"],
-    ["POWER SOURCE Without this, the system fails.","Power Board"],
-    ["CACHE CLEARED Where clothes are reset to default state.","Laundry"],
-    ["BACKUP LOCATION Where items are stored 'just in case'.","Garage"],
-    ["DISPLAY OUTPUT Pixels form reality here.","Monitor"],
-    ["SECURITY CHECKPOINT Entry requires permission.","Door"],
-    ["ENCRYPTED STORAGE Locked, hidden, not obvious.","Drawer"],
-    ["SYSTEM LOG Tracks everything that happens over time.","Clock"],
-    ["USER PROFILE Where the operator rests.","Bed"],
-    ["FINAL ACCESS NODE Only the admin reaches this point.","Desk"],
-    ["ROOT ACCESS GRANTED ACCESS GRANTED SYSTEM BREACHED Retrieve payload from secure location. Your colour is GREEN","Green Ribbon"]
-  ]
-}
-];
+const HUNTS = {
+escape:{
+name:"Escape the House",
+intro:"🎉 Welcome, Explorer!\n\nYou have been invited on a special scavenger hunt!\n\nAround this place are hidden clues waiting to be found.\nEach clue will lead you to the next one.\n\nWhen you find a clue, you might need to:\n• Look carefully\n• Think smart\n• Scan a QR code\n• Type in a secret number\n\nDon’t worry — there are no wrong turns, just keep trying!\n\nWhen you’re ready…\nTap the button below to begin your adventure! 🚀",
+clues:[
+{clue:"I show your face but I’m not a photo. I hang on walls and doors. Where am I?",answer:"mirror"},
+{clue:"I have pages but no homework. I’m quiet unless you drop me. I live where stories sleep.",answer:"bookshelf"},
+{clue:"I open wide but never talk. I keep food safe and cold. Don’t forget to close me!",answer:"fridge"},
+{clue:"I go round and round but never get dizzy. I clean but hate socks in pairs.",answer:"washing machine"},
+{clue:"I have hands but no arms. I never clap, but I’m always right on time.",answer:"clock"},
+{clue:"I hide your feet when you’re not home. I like pairs, but I’m often missing one.",answer:"shoe rack"},
+{clue:"I’m soft, I’m comfy, and I steal naps. People sit on me 'just for a minute'.",answer:"couch"},
+{clue:"I light up the dark but disappear by day. Flip me on.",answer:"lamp"},
+{clue:"I’m full of secrets, but I don’t talk. You knock before opening me.",answer:"bedroom door"},
+{clue:"You cracked every lock! The final key is hidden where treasures are kept safe. Your Colour is RED",answer:"red"}
+]},
+fortnite:{
+name:"Fortnite IRL",
+intro:null,
+clues:[
+{clue:"You’ve dropped in. First loot location: Where controllers go when the game is off.",answer:"gaming desk"},
+{clue:"Shields up! Find the place where drinks recharge HP.",answer:"fridge"},
+{clue:"Storm incoming 🌪️ Where do shoes hide when the storm hits outside?",answer:"entrance"},
+{clue:"You need mats. Wood, brick, metal… Find where tools live.",answer:"garage"},
+{clue:"Campfire deployed 🔥 Where the family gathers to chill.",answer:"lounge room"},
+{clue:"Inventory check. You can’t win without sleep.",answer:"bed"},
+{clue:"Chest nearby… I hear it. Where secrets are stored behind closed doors.",answer:"wardrobe"},
+{clue:"Reboot van activated ⚡ Where devices come back to life.",answer:"phone charger"},
+{clue:"High ground wins games. Go where you can see the whole room.",answer:"stairs"},
+{clue:"Final circle. Only one remains. Where battles are watched, not played.",answer:"tv"},
+{clue:"One last challenge… Look where snacks disappear during long sessions.",answer:"pantry"},
+{clue:"VICTORY ROYALE 🏆 Claim your reward where legends are made. Your colour is SILVER",answer:"silver"}
+]},
+hacker:{
+name:"Hacker / System Breach",
+intro:null,
+clues:[
+{clue:"SYSTEM ONLINE Begin at the device that controls all others.",answer:"router"},
+{clue:"AUTHENTICATION REQUIRED Find where passwords are written but never stored digitally.",answer:"notebook"},
+{clue:"DATA COLD STORAGE Files preserved at low temperature.",answer:"fridge"},
+{clue:"INPUT DEVICE DETECTED Where commands are typed, not spoken.",answer:"keyboard"},
+{clue:"PERIPHERAL FOUND One click can change everything.",answer:"mouse"},
+{clue:"POWER SOURCE Without this, the system fails.",answer:"power board"},
+{clue:"CACHE CLEARED Where clothes are reset to default state.",answer:"laundry"},
+{clue:"BACKUP LOCATION Where items are stored 'just in case'.",answer:"garage"},
+{clue:"DISPLAY OUTPUT Pixels form reality here.",answer:"monitor"},
+{clue:"SECURITY CHECKPOINT Entry requires permission.",answer:"door"},
+{clue:"ENCRYPTED STORAGE Locked, hidden, not obvious.",answer:"drawer"},
+{clue:"SYSTEM LOG Tracks everything that happens over time.",answer:"clock"},
+{clue:"USER PROFILE Where the operator rests.",answer:"bed"},
+{clue:"FINAL ACCESS NODE Only the admin reaches this point.",answer:"desk"},
+{clue:"ROOT ACCESS GRANTED ACCESS GRANTED SYSTEM BREACHED Retrieve payload from secure location. Your colour is GREEN",answer:"green"}
+]}
+};
 
-/* ================= INIT ================= */
-let hunts = JSON.parse(localStorage.getItem("hunts")||"[]");
+/* ---------------- ROUTER ---------------- */
 
-if(!localStorage.getItem("huntsInitialized")){
-  hunts = BASE_HUNTS.map(h=>({
-    id:uid(),
-    name:h.name,
-    steps:h.clues.map(c=>({ clue:c[0], location:c[1], code:code() }))
-  }));
-  localStorage.setItem("hunts",JSON.stringify(hunts));
-  localStorage.setItem("huntsInitialized","true");
-}
+const app=document.getElementById("app");
+const q=new URLSearchParams(location.search);
 
-const q = new URLSearchParams(location.search);
-const app = document.getElementById("app");
-
-/* ================= ROUTER ================= */
-if(q.get("start")) startPage(q.get("start"));
-else if(q.get("play")) play();
+if(q.get("play")) play();
 else if(q.get("print")) printPage(q.get("print"));
 else home();
 
-/* ================= HOME ================= */
+/* ---------------- INDEX ---------------- */
+
 function home(){
-  app.innerHTML = `<h1>Scavenger Hunts</h1>` + hunts.map(h=>`
-    <div>
-      <h3>${h.name}</h3>
-      <button onclick="location='?start=${h.id}'">▶ Test Start</button>
-      <button onclick="location='?print=${h.id}'">🖨 Print Instructions</button>
-    </div>
-  `).join("");
-}
-
-/* ================= START ================= */
-function startPage(id){
-  const h = hunts.find(x=>x.id===id);
-  app.innerHTML = `
-<h1>🎉 Welcome, Explorer!</h1>
-<p><strong>${h.name}</strong></p>
-<p>You have been invited on a special scavenger hunt!</p>
-<p>Around this place are hidden clues waiting to be found.<br>Each clue will lead you to the next one.</p>
-<p>When you find a clue, you might need to:</p>
-<ul>
-<li>Look carefully</li>
-<li>Think smart</li>
-<li>Scan a QR code</li>
-<li>Type in a secret number</li>
-</ul>
-<p>Don’t worry — there are no wrong turns, just keep trying!</p>
-<p>When you’re ready…<br>Tap the button below to begin your adventure! 🚀</p>
-<button onclick="location='?play=${id}&s=0'">▶️ Start the Hunt</button>
+app.innerHTML=`
+<h1>Scavenger Hunts</h1>
+<input class="search" placeholder="Search scavenger hunts…">
+${Object.entries(HUNTS).map(([k,h])=>`
+<div class="card">
+<div class="hunt-title">${h.name} (${h.clues.length} steps)</div>
+<div class="hunt-actions">
+<button class="btn btn-accent" onclick="location='?play=${k}&s=0'">Test</button>
+<button class="btn btn-outline" onclick="location='?print=${k}'">Print Instructions</button>
+</div>
+</div>`).join("")}
 `;
 }
 
-/* ================= PLAY ================= */
+/* ---------------- START + PLAY ---------------- */
+
 function play(){
-  const h = hunts.find(x=>x.id===q.get("play"));
-  const s = parseInt(q.get("s"));
-  if(s>=h.steps.length){
-    app.innerHTML = `<h2>🎉 Hunt Complete!</h2>`;
-    return;
-  }
-  const step = h.steps[s];
-  app.innerHTML = `
-    <h2>${step.clue}</h2>
-    <input id="ans" placeholder="Enter 6-digit code">
-    <button onclick="check('${step.code}',${s})">Submit</button>
-  `;
+const key=q.get("play");
+const step=parseInt(q.get("s")||0);
+const hunt=HUNTS[key];
+
+if(step===0){
+app.innerHTML=`
+<div class="center">
+<pre style="white-space:pre-wrap">${hunt.intro}</pre>
+<button class="btn btn-accent" onclick="location='?play=${key}&s=1'">▶️ Start the Hunt</button>
+</div>`;
+return;
 }
 
-function check(c,s){
-  const v=document.getElementById("ans").value.trim();
-  if(v===c){
-    show("correct");
-    setTimeout(()=>location=`?play=${q.get("play")}&s=${s+1}`,900);
-  } else show("wrong");
+const idx=step-1;
+const c=hunt.clues[idx];
+
+app.innerHTML=`
+<div class="center">
+<div class="clue">${c.clue}</div>
+<input class="answer" id="ans" inputmode="numeric">
+<button class="btn btn-green" onclick="check('${key}',${step})">Submit</button>
+</div>`;
 }
 
-function show(id){
-  const el=document.getElementById(id);
-  el.style.display="flex";
-  setTimeout(()=>el.style.display="none",1000);
+function check(key,step){
+const v=document.getElementById("ans").value.trim();
+if(v){
+document.getElementById("successOverlay").style.display="flex";
+setTimeout(()=>{
+document.getElementById("successOverlay").style.display="none";
+location=`?play=${key}&s=${step+1}`;
+},800);
+}
 }
 
-/* ================= PRINT ================= */
-function printPage(id){
-  const h = hunts.find(x=>x.id===id);
-  app.innerHTML = `
-<h1>${h.name} – Parent Instructions</h1>
+/* ---------------- PRINT ---------------- */
 
-<div class="print-page">
-${h.steps.map((s,i)=>`
-  <div class="print-item">
-    <strong>Clue ${i+1}:</strong> ${s.clue}<br>
-    <strong>Location:</strong> ${s.location}<br>
-    <strong>Code:</strong> ${s.code}<br>
-    <div class="qr-label">QR Code for Clue ${i+1}</div>
-    <canvas id="pqr${i}"></canvas>
-    <div class="notes"></div>
-  </div>
-`).join("")}
+function printPage(key){
+const h=HUNTS[key];
+app.innerHTML=`
+<h2>${h.name} — Parent Instructions</h2>
+${h.clues.map((c,i)=>`
+<div class="card">
+<strong>Clue ${i+1}</strong><br>${c.clue}<br>
+<strong>Answer:</strong> ${c.answer}<br>
+<strong>Notes:</strong><br><br>
+<div id="qrp${i}"></div>
+</div>`).join("")}
+
+<div class="page-break"></div>
+<h2>${h.name} — Cut-Out QR Codes</h2>
+<div class="qr-grid">
+${h.clues.map((c,i)=>`
+<div>
+<strong>${c.answer}</strong>
+<div id="qrc${i}"></div>
+</div>`).join("")}
 </div>
-
-<div class="print-page">
-<h2>Cut-Out QR Codes</h2>
-${h.steps.map((s,i)=>`
-  <div class="print-item">
-    <div class="qr-label">Clue ${i+1} – ${s.location}</div>
-    <canvas id="cqr${i}"></canvas>
-  </div>
-`).join("")}
-</div>
-
-<button onclick="window.print()">Print</button>
+<button class="btn btn-accent no-print" onclick="window.print()">Print</button>
 `;
-  h.steps.forEach((s,i)=>{
-    QRCode.toCanvas(document.getElementById("pqr"+i), s.code);
-    QRCode.toCanvas(document.getElementById("cqr"+i), s.code);
-  });
+
+h.clues.forEach((c,i)=>{
+QRCode.toCanvas(document.getElementById("qrp"+i),String(i+1).padStart(6,"0"));
+QRCode.toCanvas(document.getElementById("qrc"+i),String(i+1).padStart(6,"0"));
+});
 }
 </script>
-
 </body>
 </html>
